update index and sidebar

--- a/src/components/PostComments.astro
+++ b/src/components/PostComments.astro
@@ -23,10 +23,10 @@
     const loadGiscus = (theme: string) => {
         const script = document.createElement("script");
         script.src = "https://giscus.app/client.js";
-        script.setAttribute("data-repo", "x1x1217/test");
-        script.setAttribute("data-repo-id", "R_kgDOOZU61Q");
+        script.setAttribute("data-repo", "x1x1217/Echo-Wiki");
+        script.setAttribute("data-repo-id", "R_kgDOOZxyiQ");
         script.setAttribute("data-category", "Announcements");
-        script.setAttribute("data-category-id", "DIC_kwDOOZU61c4CpFX8");
+        script.setAttribute("data-category-id", "DIC_kwDOOZxyic4CpG-8");
         script.setAttribute("data-mapping", "pathname");
         script.setAttribute("data-strict", "0");
         script.setAttribute("data-reactions-enabled", "1");
