--- a/src/components/Sidebar-withTabs.astro
+++ b/src/components/Sidebar-withTabs.astro
@@ -98,6 +98,8 @@ const { sidebar } = Astro.props;
 
 <script>
     [
+        "/Icons/Icon_Rocket_Gray.svg",
+        "/Icons/Icon_Rocket_White.svg",
         "/Icons/Icon_Rocket_Blue.svg",
         "/Icons/Icon_Book_Gray.svg",
         "/Icons/Icon_Book_White.svg",
